--- a/fills-calcuer/public/index.html
+++ b/fills-calcuer/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://cdn-icons.flaticon.com/png/512/924/premium/924915.png?token=exp=1654208329~hmac=a6a1564772a6bf75b354a7453dca4e54" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
